infra/k8s/movies-series-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-series-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-series
  template:
    metadata:
      labels:
        app: movies-series
    spec:
      containers:
        - name: movies-series
          image: darionahuel/movies-series
---
apiVersion: v1
kind: Service
metadata:
  name: movies-series-srv
spec:
  selector:
    app: movies-series
  ports:
    - name: movies-series
      protocol: TCP
      port: 3000
      targetPort: 3000
