infra/k8s/movies-series-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-series-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-series-mongo
  template:
    metadata:
      labels:
        app: movies-series-mongo
    spec:
      containers:
        - name: movies-series-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: movies-series-mongo-srv
spec:
  selector:
    app: movies-series-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
